--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -5,42 +5,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/store.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Noto+Sans+KR:wght@100;400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/store.css">
     <title>디저트39</title>
 </head>
 
 <body>
     <div class="top">
-        <div>
+        <div class="center">
             <h2>
                 디저트39
                 <b>전국 매장 찾기</b>
-                <span class="tit-eng">Store</span>
+                <span class="tit eng fw500">Store</span>
             </h2>
         </div>
-        <!-- 카카오 맵 api -->
-        <div id="map"></div>
-        <button type="button">내 위치 기반으로 지도 보기</button>
-        <div class="info-wrap">
-            <div class="info-search-box">
-                <p>· 찾으시는 매장을 지도에서 클릭하시면 자세히 볼 수 있습니다.</p>
-                <h3>이용 가능 서비스</h3>
-                <ul>
-                    <li>포장</li>
-                    <li>배달</li>
-                    <li>주차</li>
-                    <li>Wifi</li>
-                    <li>화장실</li>
-                </ul>
-                <h3>지역별 매장 안내</h3>
-                <input type="text" name="search_txt" placeholder="매장명 또는 주소를 입력하세요">
+    </div>
+    <section class="pdt100 stroe-section">
+        <div class="section-wrap">
+            <div class="map-wrap">
+                <!-- 카카오 맵 api -->
+                <div id="map"></div>
+                <button type="button" class="fw700 btn-location">
+                    <span>내 위치 기반으로 지도 보기</span>
+                </button>
             </div>
-            <div class="info-store-box">
-
+            <div class="info-wrap">
+                <div class="info-search-box">
+                    <p>· 찾으시는 매장을 지도에서 클릭하시면 자세히 볼 수 있습니다.</p>
+                    <h3 class="info-tit">이용 가능 서비스</h3>
+                    <ul>
+                        <li>
+                            <button>
+                                <span class="ico takeout"></span>
+                                <span>포장</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <span class="ico delivery"></span>
+                                <span>배달</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <span class="ico parking"></span>
+                                <span>주차</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <span class="ico wifi"></span>
+                                <span>Wifi</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button>
+                                <span class="ico restroom"></span>
+                                <span>화장실</span>
+                            </button>
+                        </li>
+                    </ul>
+                    <h3 class="info-tit">지역별 매장 안내</h3>
+                    <input type="text" name="search_txt" placeholder="매장명 또는 주소를 입력하세요">
+                </div>
+                <div class="info-store-box">
+            
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 <!-- 카카오 맵 api -->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f7ce88603e0054baaf1a5d1193a98451"></script>
