--- a/html/Brand/index.html
+++ b/html/Brand/index.html
@@ -1,93 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Noto+Sans+KR:wght@100;400;700&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/store.css">
-    <title>디저트39</title>
-</head>
-<body>
-    <div class="top">
-        <div class="center">
-            <h2>
-                디저트39
-                <b>오시는 길</b>
-                안내
-            </h2>
-            <span class="tit eng fw500">Location</span>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Noto+Sans+KR:wght@100;400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@600&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../css/store.css" />
+        <title>디저트39</title>
+    </head>
+    <body>
+        <div class="top">
+            <div class="center">
+                <h2>
+                    디저트39
+                    <b>오시는 길</b>
+                    안내
+                </h2>
+                <span class="tit eng fw500">Location</span>
+            </div>
         </div>
-    </div>
-    <div class="location-wrap center pdt120 pdb100">
-        <div class="topbox">
-            <h2 class="fw700 tac section-title">본사</h2>
-            <div class="contact-list">
-                <div class="cont-wrap">
-                    <div class="icon">
-                        <img src="../img/adress_w.svg" alt="주소">
+        <div class="location-wrap center pdt120 pdb100">
+            <div class="topbox">
+                <h2 class="fw700 tac section-title">본사</h2>
+                <div class="contact-list">
+                    <div class="cont-wrap">
+                        <div class="icon">
+                            <img src="../img/adress_w.svg" alt="주소" />
+                        </div>
+                        <div class="txtbox">
+                            <h3 class="eng fw600">Address</h3>
+                            <p>서울특별시 강남구 언주로 321(광진빌딩 6층)</p>
+                        </div>
                     </div>
-                    <div class="txtbox">
-                        <h3 class="eng fw600">Address</h3>
-                        <p>서울특별시 강남구 언주로 321(광진빌딩 6층)</p>
+                    <div class="cont-wrap">
+                        <a href="tel:+8216442927" class="cont-wrap02">
+                            <div class="icon">
+                                <img src="../img/tel_w.svg" alt="전화" />
+                            </div>
+                            <div class="txtbox">
+                                <h3>Tel</h3>
+                                <p>1644-2927</p>
+                            </div>
+                        </a>
                     </div>
-                </div>
-                <div class="cont-wrap">
-                    <div class="icon">
-                        <img src="../img/tel_w.svg" alt="전화">
-                    </div>
-                    <div class="txtbox">
-                        <h3>Tel</h3>
-                        <p>1644-2927</p>
-                    </div>
-                </div>
-                <div class="cont-wrap">
-                    <div class="icon">
-                        <img src="../img/fax_w.svg" alt="팩스">
-                    </div>
-                    <div class="txtbox">
-                        <h3 class="eng fw600">Fax</h3>
-                        <p>02 - 501 - 3902</p>
+                    <div class="cont-wrap">
+                        <div class="icon">
+                            <img src="../img/fax_w.svg" alt="팩스" />
+                        </div>
+                        <div class="txtbox">
+                            <h3 class="eng fw600">Fax</h3>
+                            <p>02 - 501 - 3902</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="location-map-wrap">
+                <!-- 카카오 맵 api -->
+                <div id="map"></div>
+                <!-- <div class="custom_zoomcontrol radius_border">
+                <span onclick="zoomIn()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_plus.png"
+                        alt="확대"></span>
+                <span onclick="zoomOut()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_minus.png"
+                        alt="축소"></span>
+                </div> -->
+                <!-- -------------맵 버튼 시작(이었던 것) -->
+                <div class="wrap_btn_zoom">
+                    <button class="btn_zoom_in hide_text">
+                        <span class="img_zoom">확대</span>
+                    </button>
+                    <button class="btn_zoom_out hide_text">
+                        <span class="img_zoom">축소</span>
+                    </button>
+                    <button class="btn_zoom_reset hide_text">
+                        <span class="img_zoom">초기화</span>
+                    </button>
+                </div>
+                <!-- -------------맵 버튼 끝------------- -->
+            </div>
         </div>
-        <div class="location-map-wrap">
-            <!-- 카카오 맵 api -->
-            <div id="map"></div>
-        </div>
-    </div>
-</body>
-<!-- 카카오 맵 api -->
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f7ce88603e0054baaf1a5d1193a98451"></script>
-<script>
-    var container = document.getElementById('map');
-    var options = {
-        center: new kakao.maps.LatLng(37.496497, 127.04530),
-        level: 5
-    };
+    </body>
+    <!-- 카카오 맵 api -->
+    <script
+        type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f7ce88603e0054baaf1a5d1193a98451"
+    ></script>
+    <script>
+        var container = document.getElementById("map");
+        var options = {
+            center: new kakao.maps.LatLng(37.493585, 127.046417),
+            level: 4,
+        };
 
-    var map = new kakao.maps.Map(container, options);
-    // 마커가 표시될 위치
-    var markerPosition = new kakao.maps.LatLng(37.496497, 127.04530);
-    
-    // 마커 이미지
-    // var markerImage = new daum.maps.MarkerImage(
-    //         '../img/map_pin.svg', new daum.maps.Size(20, 20));
+        var map = new kakao.maps.Map(container, options);
 
-    // 마커 생성
-    var marker = new kakao.maps.Marker({
-        position: markerPosition,
-        // image: markerImage // 마커 이미지 
-    });
+        // 마커이미지의 주소입니다
+        var imageSrc =
+                "http://t1.daumcdn.net/localimg/localimages/07/2018/pc/map/marker_map01.png",
+            imageSize = new kakao.maps.Size(45, 45), // 마커이미지의 크기입니다
+            imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
 
+        // 마커가 표시될 위치
+        var markerImage = new kakao.maps.MarkerImage(
+                imageSrc,
+                imageSize,
+                imageOption
+            ),
+            markerPosition = new kakao.maps.LatLng(37.496497, 127.0453);
 
-    // 마커가 지도 위에 표시되도록 설정
-    marker.setMap(map);
-    // marker.setImage(markerImage);
-</script>
+        // 마커 생성
+        var marker = new kakao.maps.Marker({
+            position: markerPosition,
+            image: markerImage, // 마커 이미지
+        });
+        //  var iwContent = '<span>강남구 언주로 231</span>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+        // iwPosition = new kakao.maps.LatLng(37.496497, 127.04530); //인포윈도우 표시 위치입니다
+
+        // 인포윈도우를 생성합니다
+        // var infowindow = new kakao.maps.InfoWindow({
+        //     position: iwPosition,
+        //     content: iwContent
+        // });
+
+        // 마커가 지도 위에 표시되도록 설정
+        marker.setMap(map);
+        // marker.setImage(markerImage);
+
+        // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+        // infowindow.open(map, marker);
+
+        // 지도 확대, 축소 컨트롤에서 확대 버튼을 누르면 호출되어 지도를 확대하는 함수입니다
+        function zoomIn() {
+            map.setLevel(map.getLevel() - 1);
+        }
+
+        // 지도 확대, 축소 컨트롤에서 축소 버튼을 누르면 호출되어 지도를 확대하는 함수입니다
+        function zoomOut() {
+            map.setLevel(map.getLevel() + 1);
+        }
+    </script>
 </html>
