--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -114,6 +114,11 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
+                        <div class="count-box">
+                            <i class="fas fa-chevron-down"></i>
+                            <strong class="ctm fw700 text">검색결과</strong>
+                        </div>
+                        <div class="dummy-line"></div>
                     </div>
                     <!-- -------------매장 부분 시작------------- -->
                     <div class="info-store-box">
@@ -231,10 +236,87 @@
         // 마커가 표시될 위치
         var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
 
-        // 마커 생성
-        var marker = new kakao.maps.Marker({
-            position: markerPosition,
-        });
+        var positions = [
+            {
+                title: "학동역점",
+                latlng: new kakao.maps.LatLng(
+                    37.5140499644185,
+                    127.031988191374
+                ),
+            },
+            {
+                title: "강남역점",
+                latlng: new kakao.maps.LatLng(
+                    37.4956119342423,
+                    127.027090955824
+                ),
+            },
+            {
+                title: "대치점",
+                latlng: new kakao.maps.LatLng(
+                    37.4982358118448,
+                    127.054563099417
+                ),
+            },
+            {
+                title: "이수역점",
+                latlng: new kakao.maps.LatLng(
+                    37.4851006838562,
+                    126.983662134725
+                ),
+            },
+            {
+                title: "교대점",
+                latlng: new kakao.maps.LatLng(
+                    37.4920877278337,
+                    127.01426373297
+                ),
+            },
+            {
+                title: "잠실 새내역점",
+                latlng: new kakao.maps.LatLng(
+                    37.5101012306694,
+                    127.08330002464
+                ),
+            },
+            {
+                title: "송파 헬리오시티점",
+                latlng: new kakao.maps.LatLng(37.4994800225015, 127.1040656901),
+            },
+        ];
+
+        // 마커 이미지의 이미지 주소입니다
+        var imageSrc = "/img/map_pin.svg";
+
+        for (var i = 0; i < positions.length; i++) {
+            // 마커 이미지의 이미지 크기 입니다
+            var imageSize = new kakao.maps.Size(65, 65);
+
+            // 마커 이미지를 생성합니다
+            var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+
+            // 마커를 생성합니다
+            var marker = new kakao.maps.Marker({
+                map: map, // 마커를 표시할 지도
+                position: positions[i].latlng, // 마커를 표시할 위치
+                title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+                image: markerImage, // 마커 이미지
+            });
+
+            // addMarker(positions[i], i);
+        }
+
+        // // 마커 이미지
+        // var imageSrc = "/img/map_pin.svg";
+
+        // // 마커 이미지 크기
+        // var imageSize = new kakao.maps.Size(65, 65);
+
+        // // 마커 생성
+        // var marker = new kakao.maps.Marker({
+        //     position: markerPosition,
+        //     image: markerImage
+        // });
 
         // 마커가 지도 위에 표시되도록 설정
         marker.setMap(map);
