--- a/html/Brand/index.html
+++ b/html/Brand/index.html
@@ -105,10 +105,14 @@
         var map = new kakao.maps.Map(container, options);
 
         // 마커이미지의 주소입니다
-        var imageSrc =
-                "http://t1.daumcdn.net/localimg/localimages/07/2018/pc/map/marker_map01.png",
-            imageSize = new kakao.maps.Size(45, 45), // 마커이미지의 크기입니다
-            imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+        var imageSrc = "/img/marker_map01.png";
+
+        // 마커이미지의 크기입니다
+        var imageSize = new kakao.maps.Size(45, 50);
+
+        // 마커이미지의 옵션입니다.
+        // imageOption = { offset: new kakao.maps.Point(27, 69) };
+        // 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
 
         // 마커가 표시될 위치
         var markerImage = new kakao.maps.MarkerImage(
