--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -45,7 +45,7 @@
                     <!-- -------------카카오 맵 api 끝--------------->
                     <button type="button" class="fw700 btn-location">
                         <span class="icon">
-                            <img src="/img/gps_icon_w.png" alt="gps 아이콘" />
+                            <img src="/img/gps_icon_w.svg" alt="gps 아이콘" />
                         </span>
                         내 위치 기반으로 지도 보기
                     </button>
@@ -63,7 +63,7 @@
                                 <button class="btn-cate">
                                     <span class="textbox">
                                         <span class="ico takeout"></span>
-                                        <span>포장</span>
+                                        <span class="text">포장</span>
                                     </span>
                                 </button>
                             </li>
@@ -71,7 +71,7 @@
                                 <button class="btn-cate">
                                     <span class="textbox">
                                         <span class="ico delivery"></span>
-                                        <span>배달</span>
+                                        <span class="text">배달</span>
                                     </span>
                                 </button>
                             </li>
@@ -79,7 +79,7 @@
                                 <button class="btn-cate">
                                     <span class="textbox">
                                         <span class="ico parking"></span>
-                                        <span>주차</span>
+                                        <span class="text">주차</span>
                                     </span>
                                 </button>
                             </li>
@@ -87,7 +87,7 @@
                                 <button class="btn-cate">
                                     <span class="textbox">
                                         <span class="ico wifi"></span>
-                                        <span>Wifi</span>
+                                        <span class="text">Wifi</span>
                                     </span>
                                 </button>
                             </li>
@@ -97,7 +97,7 @@
                                         <span class="ico">
                                             <i class="fas fa-restroom"></i>
                                         </span>
-                                        <span>화장실</span>
+                                        <span class="text">화장실</span>
                                     </span>
                                 </button>
                             </li>
