--- a/html/Brand/index.html
+++ b/html/Brand/index.html
@@ -32,32 +32,40 @@
         </div>
         <div class="location-wrap center pdt120 pdb100">
             <div class="topbox">
-                <h2 class="fw700 tac section-title">본사</h2>
+                <h2 class="fw700 tac section-title">
+                    <span class="deco-backline">본사</span>
+                </h2>
+
                 <div class="contact-list">
                     <div class="cont-wrap">
                         <div class="icon">
                             <img src="../img/adress_w.svg" alt="주소" />
                         </div>
+
                         <div class="txtbox">
                             <h3 class="eng fw600">Address</h3>
                             <p>서울특별시 강남구 언주로 321(광진빌딩 6층)</p>
                         </div>
                     </div>
+
                     <div class="cont-wrap">
                         <a href="tel:+8216442927" class="cont-wrap02">
                             <div class="icon">
                                 <img src="../img/tel_w.svg" alt="전화" />
                             </div>
+
                             <div class="txtbox">
                                 <h3>Tel</h3>
                                 <p>1644-2927</p>
                             </div>
                         </a>
                     </div>
+
                     <div class="cont-wrap">
                         <div class="icon">
                             <img src="../img/fax_w.svg" alt="팩스" />
                         </div>
+
                         <div class="txtbox">
                             <h3 class="eng fw600">Fax</h3>
                             <p>02 - 501 - 3902</p>
@@ -74,14 +82,16 @@
                 <span onclick="zoomOut()"><img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/ico_minus.png"
                         alt="축소"></span>
                 </div> -->
-                <!-- -------------맵 버튼 시작(이었던 것) -->
+                <!-- -------------맵 버튼 시작(이었던 것)------------- -->
                 <div class="wrap_btn_zoom">
                     <button class="btn_zoom_in hide_text">
                         <span class="img_zoom">확대</span>
                     </button>
+
                     <button class="btn_zoom_out hide_text">
                         <span class="img_zoom">축소</span>
                     </button>
+
                     <button class="btn_zoom_reset hide_text">
                         <span class="img_zoom">초기화</span>
                     </button>
@@ -105,10 +115,13 @@
         var map = new kakao.maps.Map(container, options);
 
         // 마커이미지의 주소입니다
-        var imageSrc = "/img/marker_map01.png";
+        // var imageSrc = "/img/marker_map01.png";
+        var imageSrc =
+                "http://t1.daumcdn.net/localimg/localimages/07/2018/pc/map/marker_map01.png",
+            imageSize = new kakao.maps.Size(45, 50);
 
         // 마커이미지의 크기입니다
-        var imageSize = new kakao.maps.Size(45, 50);
+        // var imageSize = new kakao.maps.Size(45, 50);
 
         // 마커이미지의 옵션입니다.
         // imageOption = { offset: new kakao.maps.Point(27, 69) };
@@ -117,8 +130,8 @@
         // 마커가 표시될 위치
         var markerImage = new kakao.maps.MarkerImage(
                 imageSrc,
-                imageSize,
-                imageOption
+                imageSize
+                // imageOption
             ),
             markerPosition = new kakao.maps.LatLng(37.496497, 127.0453);
 
@@ -127,6 +140,24 @@
             position: markerPosition,
             image: markerImage, // 마커 이미지
         });
+
+        // 마커가 지도 위에 표시되도록 설정
+        marker.setMap(map);
+
+        // 인포윈도우에 나올 내용
+        var iwContent =
+                '<div class="roughmap_lebel_text" style="top: -57px; left: -2.25px; width:129px;"><a href="https://map.kakao.com/?urlX=509996.0&amp;urlY=1110303.0&amp;name=%EC%84%9C%EC%9A%B8%20%EA%B0%95%EB%82%A8%EA%B5%AC%20%EC%96%B8%EC%A3%BC%EB%A1%9C%20321&amp;map_type=TYPE_MAP&amp;from=roughmap" target="_blank"><span class="roughmap_lebel_text">서울 강남구 언주로 321</span></a></div>',
+            iwPosition = new kakao.maps.LatLng(37.496497, 127.0453); //인포윈도우 표시 위치입니다
+
+        // 인포윈도우를 생성합니다
+        var infowindow = new kakao.maps.InfoWindow({
+            position: iwPosition,
+            content: iwContent,
+        });
+
+        // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+        infowindow.open(map, marker);
+
         //  var iwContent = '<span>강남구 언주로 231</span>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
         // iwPosition = new kakao.maps.LatLng(37.496497, 127.04530); //인포윈도우 표시 위치입니다
 
@@ -136,8 +167,6 @@
         //     content: iwContent
         // });
 
-        // 마커가 지도 위에 표시되도록 설정
-        marker.setMap(map);
         // marker.setImage(markerImage);
 
         // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
