--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         />
-        <link rel="stylesheet" href="../css/store.css" />
+        <link rel="stylesheet" href="/css/store.css" />
         <title>디저트39</title>
     </head>
     <script
