--- a/html/Brand/index.html
+++ b/html/Brand/index.html
@@ -16,7 +16,7 @@
             href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@600&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="../css/store.css" />
+        <link rel="stylesheet" href="/css/store.css" />
         <title>디저트39</title>
     </head>
     <body>
